@@ -32,7 +32,7 @@ namespace RCT1
     bool RideTypeUsesVehicles(RideType rideType);
     bool PathIsQueue(uint8_t pathType);
     uint8_t NormalisePathAddition(uint8_t pathAdditionType);
-    uint8_t GetVehicleSubEntryIndex(uint8_t vehicleSubEntry);
+    uint8_t GetVehicleSubEntryIndex(uint8_t rct1VehicleType, uint8_t vehicleSubEntry);
 
     std::string_view GetRideTypeObject(RideType rideType);
     std::string_view GetVehicleObject(uint8_t vehicleType);
